# loop

./: .gitignore  AGENTS.md  Makefile  README.md  dp-policy.json
.beads/: issues.jsonl  metadata.json
.github/workflows/: rlm-core-coverage.yml  rlm-core-feature-matrix.yml
docs/: DOCS-ARCHITECTURE.md  README.md  glossary.md  implementation-plan-wave3-5.md  implementation-roadmap.md  lean-formal-verification-design.md  migration-spec-recurse.md  migration-spec-rlm-claude-code.md  unified-rlm-library-design.md  writing-style.md
docs/adr/: ADR-001-unified-rlm-library.md  ADR-002-lean-formal-verification.md  ADR-003-dspy-inspired-improvements.md
docs/concepts/: README.md  mental-model.md  principles.md
docs/developer-guide/: README.md  api-docs-status.md  contribution-workflow.md  quality-gates.md  setup.md  workflow-cookbook.md
docs/execution-plan/: COMPAT-PIPELINE-M4.md  COMPATIBILITY-MATRIX.md  DECISIONS.md  README.md  (+12 more)
rlm-core/: .gitignore  CONSOLIDATION_PLAN.md  Cargo.toml  README.md  pyproject.toml  pytest.ini
rlm-core-derive/: Cargo.toml
rlm-core-derive/.reasoning_logs/sessions/: 2026-01-21_09cedc09.jsonl  2026-01-21_3673e41d.jsonl  2026-01-21_3c6bba00.jsonl  2026-01-21_3d20e29f.jsonl  2026-01-21_5bd76173.jsonl  2026-01-21_6957c11a.jsonl  2026-01-21_6c3b936e.jsonl  2026-01-21_8160f02b.jsonl  2026-01-21_a2909174.jsonl  2026-01-21_a96f9e31.jsonl  2026-01-21_ae88be18.jsonl  2026-01-21_ca67ed7d.jsonl  2026-01-21_cbed4dd8.jsonl  2026-01-21_e44b39b9.jsonl  2026-01-21_e5942d28.jsonl  2026-01-21_e7947217.jsonl  2026-01-21_e886d517.jsonl  2026-01-21_f4bd8eb3.jsonl  2026-01-21_fda826a8.jsonl
rlm-core-derive/src/: lib.rs
rlm-core/docs/adr/: 0001-consolidate-rlm-core-repositories.md
rlm-core/go/: go.mod
rlm-core/go/rlmcore/: cost.go  epistemic.go  example_test.go  go.mod  memory.go  orchestrator.go  reasoning.go  repl.go  rlmcore.go  rlmcore_test.go  trajectory.go
rlm-core/go/tui/: model.go  model_test.go  stream.go
rlm-core/include/: rlm_core.h
rlm-core/proptest-regressions/epistemic/: proptest.txt
rlm-core/python/: README.md  pyproject.toml
rlm-core/python/rlm_core/: __init__.py  __init__.pyi
rlm-core/python/rlm_repl/: __init__.py  __main__.py  deferred.py  helpers.py  main.py  protocol.py  sandbox.py
rlm-core/python/tests/: __init__.py  test_repl.py
rlm-core/src/: complexity.rs  context.rs  error.rs  lib.rs  orchestrator.rs  repl.rs  trajectory.rs
rlm-core/src/adapters/: cli.rs  mod.rs
rlm-core/src/adapters/claude_code/: adapter.rs  hooks.rs  mcp.rs  mod.rs  skills.rs  types.rs
rlm-core/src/adapters/tui/: adapter.rs  events.rs  mod.rs  panels.rs
rlm-core/src/adversarial/: invoker.rs  mod.rs  strategies.rs  types.rs  validator.rs
rlm-core/src/context/: externalize.rs  mod.rs  types.rs
rlm-core/src/dp_integration/: commands.rs  coverage.rs  mod.rs  proof_status.rs  review.rs  types.rs
rlm-core/src/epistemic/: claims.rs  kl.rs  memory_gate.rs  mod.rs  proptest.rs  scrubber.rs  types.rs  verifier.rs
rlm-core/src/ffi/: context.rs  cost.rs  epistemic.rs  error.rs  memory.rs  mod.rs  orchestrator.rs  reasoning.rs  repl.rs  trajectory.rs  types.rs
rlm-core/src/lean/: mod.rs  repl.rs  types.rs
rlm-core/src/llm/: batch.rs  cache.rs  client.rs  mod.rs  router.rs  types.rs
rlm-core/src/memory/: mod.rs  schema.rs  store.rs  types.rs
rlm-core/src/module/: compose.rs  example.rs  mod.rs  optimize.rs  predict.rs
rlm-core/src/proof/: ai_assistant.rs  engine.rs  mod.rs  session.rs  tactics.rs  types.rs
rlm-core/src/pybind/: adversarial.rs  context.rs  epistemic.rs  llm.rs  memory.rs  mod.rs  trajectory.rs
rlm-core/src/reasoning/: mod.rs  query.rs  store.rs  trace.rs  types.rs  visualize.rs
rlm-core/src/signature/: fallback.rs  mod.rs  submit.rs  types.rs  validation.rs
rlm-core/src/spec_agent/: agent.rs  generators.rs  mod.rs  parser.rs  types.rs
rlm-core/src/sync/: drift.rs  engine.rs  generators.rs  mod.rs  types.rs
rlm-core/src/topos/: client.rs  index.rs  mod.rs  parser.rs  types.rs
rlm-core/tests/: __init__.py  conftest.py
rlm-core/tests/integration/: __init__.py  test_upgrade_compatibility.py
scripts/: check_docs_style.sh  run_coverage.sh  run_m4_compat_pipeline.sh  run_m5_perf_harness.sh  run_rflx_interop_fixture_gate.sh  run_vg_claude_adapter_e2e_gate.sh  run_vg_proptest_gate.sh  run_vg_py_integration_gate.sh  run_weekly_cadence_packet.sh  safe_run.sh  validate_rflx_interop_fixtures.py
(+401 files in other folders)
