[package]
name = "rlm-core-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for rlm-core typed signatures"
license = "MIT"
repository = "https://github.com/rand/loop"
keywords = ["rlm", "llm", "derive", "macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
rlm-core = { path = "../rlm-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
